log
Fri 10 Mar 2023 02:50:31 PM UTC: 
 tests:  0|7
total_score: 0/70
d7f07f8
Fri 10 Mar 2023 02:52:19 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
26b7565
Fri 10 Mar 2023 02:58:28 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
4351c17
Fri 10 Mar 2023 03:01:47 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
f740504
Fri 10 Mar 2023 03:04:23 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
e56f2e6
Fri 10 Mar 2023 03:10:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:91:10: error: incompatible types when assigning to type ‘Vector’ from type ‘int’
   91 |   v[i] = valor;
      |          ^~~~~
Compilation failed
594644e
Fri 10 Mar 2023 03:13:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
c9baa46
Fri 10 Mar 2023 03:17:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
6b5ad41
Fri 10 Mar 2023 03:29:57 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
09c00f5
Fri 10 Mar 2023 03:31:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
fdb3a6c
Fri 10 Mar 2023 03:34:53 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|1
total_score: 60/70
6350ba3
